test/kustomize/gateway/gateway-patch.yaml
- op: replace
  path: /spec/listeners/1/tls/certificateRefs
  value:
    - name: grafana-tls-secret # TLS Certificate for grafana.prakriti.website
      kind: Secret
    - name: loki-test-tls-secret # TLS Certificate for test.prakriti.website (test frontend)
      kind: Secret
    - name: prometheus-tls-secret # TLS Certificate for prometheus.prakriti.website
      kind: Secret
