test/kustomize/gateway/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - gateway.yaml
  - loki-test-certificate.yaml
  - loki-test-httproute.yaml

patches:
  - target:
      group: gateway.networking.k8s.io
      version: v1
      kind: Gateway
      name: default-gateway
      namespace: gateway-system
    path: gateway-patch.yaml
