test/kustomize/gateway/loki-test-certificate.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: loki-test-tls
  namespace: gateway-system
spec:
  commonName: test.prakriti.website
  dnsNames:
  - test.prakriti.website
  secretName: loki-test-tls-secret
  issuerRef:
    name: selfsigned-issuer
    kind: ClusterIssuer
