test/kustomize/gateway/loki-test-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-test-route
  namespace: test
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-system
  hostnames:
  - test.prakriti.website
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/service-a
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: service-a
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /api/service-b
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: service-b
      port: 8081
  - matches:
    - path:
        type: PathPrefix
        value: /api/service-c
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: service-c
      port: 8082
  - matches:
    - path:
        type: PathPrefix
        value: /api/service-d
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: service-d
      port: 8083
  - backendRefs:
    - name: service-e
      port: 80
